--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "firebase": "^11.0.2",
     "framer-motion": "^11.13.1",
     "next": "15.0.4",
+    "prettier": "^3.4.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   },
