--- a/package.json
+++ b/package.json
@@ -10,9 +10,8 @@
   },
   "dependencies": {
     "@nextui-org/react": "^2.6.4",
+    "@supabase/supabase-js": "^2.47.2",
     "@tanstack/react-query": "^5.62.3",
-    "axios": "^1.7.9",
-    "firebase": "^11.0.2",
     "framer-motion": "^11.13.1",
     "next": "15.0.4",
     "next-themes": "^0.4.4",
